--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -8,18 +8,20 @@
     {% if page_meta.html_title or pageTitle %}<title>{{ page_meta.html_title or pageTitle }}</title>{% endif %}
     {% if site_settings.favicon_src %}<link rel="shortcut icon" href="{{ site_settings.favicon_src }}" />{% endif %}
     <meta name="description" content="{{ page_meta.meta_description }}">
+    <script src="https://kit.fontawesome.com/b38c0b0f8c.js" crossorigin="anonymous"></script>
     {{ require_css(get_asset_url("../../css/main.css")) }}
-    {# This is intended to be used if a template requires template specific style sheets #}
+    {{ require_css(get_asset_url("../../css/app.css")) }}
     {% if template_css %}
       {{ require_css(get_asset_url(template_css)) }}
     {% endif %}
     {{ require_css(get_asset_url("../../css/theme-overrides.css")) }}
-    {# To see a full list of what is included via standard_header_includes please reference this article: https://developers.hubspot.com/docs/cms/hubl/variables#required-page-template-variables #}
     {{ standard_header_includes }}
   </head>
   <body>
     <div class="body-wrapper {{ builtin_body_classes }}">
+      <a href="#main-content" class="header__skip">Skip to content</a>
       {% block header %}
+        {% global_partial path="../partials/top-header.html" %}
         {% global_partial path="../partials/header.html" %}
       {% endblock header %}
 
@@ -34,7 +36,8 @@
         {% global_partial path="../partials/footer.html" %}
       {% endblock footer %}
     </div>
-    {{ require_js(get_asset_url("../../js/main.js")) }}
+    {{ require_js("https://code.jquery.com/jquery-3.6.3.min.js") }}
+    {{ require_js(get_asset_url("../../js/app.min.js")) }}
     {# To see a full list of what is included via standard_footer_includes please reference this article: https://developers.hubspot.com/docs/cms/hubl/variables#required-page-template-variables #}
     {{ standard_footer_includes }}
   </body>
