--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -8,10 +8,23 @@
 
 {% block body %}
 
+{# All templates are recommended to have an h1 present for both accessibility and SEO best practice. This should be at the top of the template before any other textual content. The h1 element below is within a dnd area to allow content editors the ability to adjust the content and alignment of the text. #}
+
 {% dnd_area "dnd_area"
   label="Main section",
   class="body-container body-container--home"
 %}
+
+  {# Hero banner #}
+
+  {% include_dnd_partial path="../sections/hero-banner.html" %}
+
+  {# Two column image right #}
+
+  {% include_dnd_partial path="../sections/multi-row-content.html" %}
+
+  {# Two column image left #}
+
   {% dnd_section
     background_color="#f8fafc",
     vertical_alignment="MIDDLE"
@@ -38,5 +51,14 @@
     %}
     {% end_dnd_module %}
   {% end_dnd_section %}
+
+  {# Call to action #}
+
+  {% include_dnd_partial path="../sections/call-to-action.html" %}
+
+  {# Three column image with text #}
+
+  {% include_dnd_partial path="../sections/multi-column-content.html" %}
+
 {% end_dnd_area %}
 {% endblock body %}
