--- a/src/css/theme-overrides.css
+++ b/src/css/theme-overrides.css
@@ -9,11 +9,18 @@
     1d. Buttons
     1e. Forms
     1f. Tables
+    1g. Website header
+    1h. Website footer
   2. Containers / Grid / DND areas
   3. Typography
   4. Buttons
   5. Forms
   6. Tables
+  7. Website header
+  8. Website footer
+  9. Blog
+  10. System pages
+  11. Modules
 
 ##}
 
@@ -95,12 +102,25 @@
 {% set table_cell_spacing = theme.tables.cells.spacing.spacing.css %}
 {% set table_border = theme.tables.cells.border.border.css %}
 
+/* 1g. Website header */
+
+{% set nav_font_color = theme.header.menu.text.color.color %}
+{% set nav_drop_down_font_color = theme.header.menu.drop_downs.text.color.color %}
+{% set nav_drop_down_bg_color = color(theme.header.menu.drop_downs.background.color) %}
+{% set nav_drop_down_border = theme.header.menu.drop_downs.border.border.css %}
+
+{% set header_bg_color = color(theme.header.background.color) %}
+
+/* 1h. Website footer */
+
+{% set footer_bg_color = color(theme.footer.background.color) %}
+{% set footer_font_color = theme.footer.text.color.color %}
+
 {###########################################################################}
 {##################   2. Containers / Grid / DND areas   ###################}
 {###########################################################################}
 
 .content-wrapper {
-  width: 100%;
   max-width: {{ container_width }};
 }
 
@@ -110,7 +130,6 @@
 }
 
 .dnd-section > .row-fluid {
-  width: 100%;
   max-width: {{ container_width }};
 }
 
@@ -126,7 +145,6 @@ body {
   {{ body_font.style }};
   color: {{ body_font.color }};
   font-size: {{ body_font.size ~ body_font.size_unit }};
-  line-height: 1.68;
 }
 
 /* Paragraphs */
@@ -212,6 +230,38 @@ blockquote {
 {###########################################################################}
 {############################   4. Buttons   ###############################}
 {###########################################################################}
+
+button,
+.button,
+.hs-blog-post-listing__post-button {
+  {{ button_border }}
+  {{ button_spacing }}
+  {{ button_font.style }};
+  background-color: {{ button_bg_color }};
+  border-radius: {{ button_corner_radius }};
+  color: {{ button_font.color }};
+  font-size: {{ button_font.size ~ button_font.size_unit }};
+  text-transform: {{ button_text_transform }};
+}
+
+button:hover,
+button:focus,
+.button:hover,
+.button:focus,
+.hs-blog-post-listing__post-button:hover,
+.hs-blog-post-listing__post-button:focus {
+  {{ button_font.style }};
+  background-color: rgba({{ color_variant(theme.buttons.background.color.color, -40)|convert_rgb }}, {{ theme.buttons.background.color.opacity / 100 }});
+  border-color: {{ color_variant(theme.buttons.border.border.top.color, -40) }};
+}
+
+button:active,
+.button:active,
+.hs-blog-post-listing__post-button:active {
+  {{ button_font.style }};
+  background-color: rgba({{ color_variant(theme.buttons.background.color.color, 40)|convert_rgb }}, {{ theme.buttons.background.color.opacity / 100 }});
+  border-color: {{ color_variant(theme.buttons.border.border.top.color, 40) }};
+}
 
 {###########################################################################}
 {##############################   5. Forms   ###############################}
@@ -352,4 +402,298 @@ thead th {
 tfoot td {
   background-color: {{ table_footer_bg_color }};
   color: {{ table_footer_font_color }};
+}
+
+{###########################################################################}
+{###########################   7. Website header   #########################}
+{###########################################################################}
+
+.header {
+  background-color: {{ header_bg_color }};
+}
+
+.menu__link,
+.header__logo .logo-company-name,
+.header__language-switcher-label-current,
+.header__language-switcher .lang_list_class li a {
+  color: {{ nav_font_color }};
+  font-family: {{ body_font.font }};
+}
+
+.menu__child-toggle-icon {
+  border-top-color: {{ nav_font_color }};
+}
+
+.menu .menu__link:hover,
+.menu .menu__link:focus,
+.header__language-switcher-label-current:hover,
+.header__language-switcher-label-current:focus,
+.header__language-switcher .lang_list_class li:hover a,
+.header__language-switcher .lang_list_class li a:focus {
+  color: {{ color_variant(nav_font_color, -40) }};
+}
+
+.menu__child-toggle-icon:hover,
+.menu__child-toggle-icon:focus {
+  border-top-color: {{ color_variant(nav_font_color, -40) }};
+}
+
+.menu .menu__link:active,
+.header__language-switcher-label-current:active,
+.header__language-switcher .lang_list_class li a:active {
+  color: {{ color_variant(nav_font_color, 40) }};
+}
+
+.menu__child-toggle-icon:active {
+  border-top-color: {{ color_variant(nav_font_color, 40) }};
+}
+
+.menu .menu__item--depth-1 > .menu__link--active-link:after {
+  background-color: {{ nav_font_color }};
+}
+
+@media (min-width: 767px) {
+  .menu .menu__submenu,
+  .header__language-switcher .lang_list_class {
+    {{ nav_drop_down_border }}
+    background-color: {{ nav_drop_down_bg_color }};
+  }
+
+  .menu__submenu--level-2 > .menu__item:first-child:before {
+    {{ nav_drop_down_border }}
+    background-color: {{ nav_drop_down_bg_color }};
+  }
+}
+
+.menu__submenu .menu__link,
+.menu__submenu .menu__link:hover,
+.menu__submenu .menu__link:focus {
+  color: {{ nav_drop_down_font_color }};
+  background-color: {{ nav_drop_down_bg_color }};
+}
+
+.header__language-switcher .lang_list_class:before {
+  border-bottom-color: {{ theme.header.menu.drop_downs.border.border.top.color }};
+}
+
+.menu__submenu .menu__link:hover,
+.menu__submenu .menu__link:focus,
+.header__language-switcher .lang_list_class li:hover,
+.menu__submenu--level-2 > .menu__item:first-child:hover:before,
+.menu__submenu--level-2 > .menu__item:first-child.focus:before {
+  background-color: {{ header_bg_color }};
+}
+
+.header__language-switcher .lang_list_class.first-active::after {
+  border-bottom-color: {{ header_bg_color }};
+}
+
+.header__language-switcher-label-current,
+.header__language-switcher .lang_list_class li a {
+  font-family: {{ body_font.font }};
+}
+
+.header__language-switcher-label-current:after {
+  border-top-color: {{ nav_font_color }};
+}
+
+@media(max-width: 767px) {
+  .header__navigation {
+    background-color: {{ header_bg_color }};
+  }
+
+  .header__navigation-toggle svg,
+  .menu-arrow svg {
+    fill: {{ nav_font_color }};
+  }
+}
+
+{###########################################################################}
+{###########################   8. Website footer   #########################}
+{###########################################################################}
+
+.footer {
+  background-color: {{ footer_bg_color }};
+}
+
+/* Footer content */
+
+.footer p,
+.footer h1,
+.footer h2,
+.footer h3,
+.footer h4,
+.footer h5,
+.footer h6,
+.footer label,
+.footer span,
+.footer li,
+.footer img {
+  color: {{ footer_font_color }};
+}
+
+{###########################################################################}
+{##############################   9. Blog   ################################}
+{###########################################################################}
+
+.blog-post,
+.blog-header__inner,
+.blog-related-posts {
+  padding: {{ theme.spacing.vertical_spacing ~ 'px' }} 0;
+}
+
+/* Blog post */
+
+.blog-post__meta a {
+  color: {{ body_font.color }};
+}
+
+.blog-post__tag-link {
+  color: {{ body_font.color }};
+}
+
+.blog-post__tag-link:hover,
+.blog-post__tag-link:focus {
+  color: {{ color_variant(body_font.color, -40) }};
+}
+
+.blog-post__tag-link:active {
+  color: {{ color_variant(body_font.color, 40) }};
+}
+
+/* Blog related posts */
+
+.blog-related-posts__title-link,
+.blog-related-posts__title-link:hover,
+.blog-related-posts__title-link:focus,
+.blog-related-posts__title-link:active {
+  {{ h2_font.style }};
+  text-transform: {{ h2_text_transform }};
+}
+
+.blog-related-posts__title-link {
+  color: {{ h2_font.color }};
+}
+
+.blog-related-posts__title-link:hover,
+.blog-related-posts__title-link:focus {
+  color: {{ color_variant(h2_font.color, -40) }};
+}
+
+.blog-related-posts__title-link:active {
+  color: {{ color_variant(h2_font.color, 40) }};
+}
+
+/* Blog comments */
+
+.blog-comments {
+  margin-bottom: {{ theme.spacing.vertical_spacing }}px;
+}
+
+#comments-listing .comment-reply-to {
+  color: {{ anchor_font.color }};
+}
+
+#comments-listing .comment-reply-to:hover,
+#comments-listing .comment-reply-to:focus {
+  color: {{ color_variant(anchor_font.color, -40) }};
+}
+
+#comments-listing .comment-reply-to:active {
+  color: {{ color_variant(anchor_font.color, 40) }};
+}
+
+{###########################################################################}
+{##########################   10. System pages   ###########################}
+{###########################################################################}
+
+.hs-search-results__title {
+  {{ h1_font.style }};
+  color: {{ h1_font.color }};
+}
+
+{###########################################################################}
+{############################   11. Modules   ##############################}
+{###########################################################################}
+
+/* Blog listing */
+
+.hs-blog-post-listing__post-title-link,
+.hs-blog-post-listing__post-title-link:hover,
+.hs-blog-post-listing__post-title-link:focus,
+.hs-blog-post-listing__post-title-link:active {
+  {{ h2_font.style }};
+  text-transform: {{ h2_text_transform }};
+}
+
+.hs-blog-post-listing__post-title-link {
+  color: {{ h2_font.color }};
+}
+
+.hs-blog-post-listing__post-title-link:hover,
+.hs-blog-post-listing__post-title-link:focus {
+  color: {{ color_variant(h2_font.color, -40) }};
+}
+
+.hs-blog-post-listing__post-title-link:active {
+  color: {{ color_variant(h2_font.color, 40) }};
+}
+
+
+.hs-blog-post-listing__post-tag,
+.hs-blog-post-listing__post-author-name {
+  color: {{ body_font.color }};
+}
+
+/* Blog pagination */
+
+.hs-pagination__link-text,
+.hs-pagination__link--number {
+  color: {{ body_font.color }};
+}
+
+.hs-pagination__link:hover .hs-pagination__link-text,
+.hs-pagination__link:focus .hs-pagination__link-text,
+.hs-pagination__link--number:hover,
+.hs-pagination__link--number:focus {
+  color: {{ color_variant(body_font.color, -40) }};
+}
+
+.hs-pagination__link:active .hs-pagination__link-text,
+.hs-pagination__link--number:active {
+  color: {{ color_variant(body_font.color, 40) }};
+}
+
+.hs-pagination__link-icon svg {
+  fill: {{ body_font.color }};
+}
+
+/* Pricing card */
+
+.card__price {
+  {{ h3_font.style }};
+  color: {{ h3_font.color }};
+  font-size: {{ h3_font.size ~ h3_font.size_unit }};
+}
+
+.card__body svg {
+  fill: {{ primary_color }};
+}
+
+/* Social follow */
+
+.social-links__icon {
+  background-color: {{ primary_color }};
+}
+
+.social-links__icon:hover,
+.social-links__icon:focus {
+  background-color: {{ color_variant(primary_color, -40) }};
+}
+
+.social-links__icon:active {
+  background-color: {{ color_variant(primary_color, 40) }};
+  {{ h3_font.style }};
+  color: {{ h3_font.color }};
+  font-size: {{ h3_font.size ~ h3_font.size_unit }};
 }
