--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -1,3 +1,7 @@
+<!--
+  templateType: global_partial
+  label: Website footer
+-->
 {% module "main-nav-2"
   path="../../modules/bottom-highlight",
   label="Bottom Highlight"
@@ -37,12 +41,10 @@
         {% end_dnd_column %}
         {% dnd_column offset=6, width=3 %}
           {% dnd_row %}
-            
           {% end_dnd_row %}
         {% end_dnd_column %}
         {% dnd_column offset=9, width=3 %}
           {% dnd_row %}
-            
           {% end_dnd_row %}
         {% end_dnd_column %}
       {% end_dnd_section %}
