--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -2,7 +2,7 @@
   templateType: global_partial
   label: Website footer
 -->
-{% module "main-nav-2"
+{% module "bottom-highlight"
   path="../../modules/bottom-highlight",
   label="Bottom Highlight"
 %}
