--- a/src/modules/list-explanation.module/module.css
+++ b/src/modules/list-explanation.module/module.css
@@ -1,14 +1,33 @@
+{% set mobilebreak = 768 %}
+{% set tabletbreak = 1024 %}
+
 .list-explanation {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  margin: 0 -28px;
+  display: block;
 }
 
 .list-explanation__left,
 .list-explanation__right {
-  flex: 0 0 50%;
-  padding: 0 28px;
+  
+}
+
+.list-explanation__left {
+  margin-bottom: 2rem;
+}
+
+@media (min-width: {{ tabletbreak }}px) {
+  .list-explanation {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    margin: 0 -28px;
+  }
+
+  .list-explanation__left,
+  .list-explanation__right {
+    flex: 0 0 50%;
+    padding: 0 28px;
+    margin-bottom: 0;
+  }
 }
 
 .list-explanation__left-content,
@@ -60,7 +79,6 @@
   margin-bottom: 70px;
   margin-left: 106px;
   position: relative;
-  line-height: 1.1;
   padding-top: 8px;
   z-index: 1;
 }
