--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,5 @@
 @import 'settings';
+@import 'mixins';
 @import 'base';
 
 @import 'components/top-header';
@@ -6,3 +7,5 @@
 @import 'components/footer';
 
 @import 'components/post_listing';
+
+@import 'components/strype-button';
