--- a/src/modules/strype-menu.module/module.css
+++ b/src/modules/strype-menu.module/module.css
@@ -50,10 +50,11 @@
     justify-content: center;
     align-items: center;
     align-items: center;
-    padding: 0 1rem;
+    padding: 0 0.8rem;
     position: relative;
     transition: color 200ms ease-in-out;
     cursor: pointer;
+    font-size: 0.9rem;
   }
 
   .strype-menu__item:hover > a, .strype-menu__item:hover > span {
@@ -79,6 +80,13 @@
     margin-left: 0.3rem;
     font: var(--fa-font-solid);
     font-size: 12px;
+  }
+}
+
+@media (min-width: 1240px) {
+  .strype-menu__item > a, .strype-menu__item > span {
+    font-size: 1rem;
+    padding: 0 1rem;
   }
 }
 
