--- a/src/css/theme-overrides.css
+++ b/src/css/theme-overrides.css
@@ -203,6 +203,10 @@ h6,
   text-transform: {{ h6_text_transform }};
 }
 
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+  line-height: 1.15;
+}
 /* Blockquote */
 
 blockquote {
