--- a/src/modules/benefits-table.module/module.css
+++ b/src/modules/benefits-table.module/module.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   border-collapse: collapse;
+  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.12);
 }
 
 .benefits-table__table th,
