[IMP] Added basic global default content styling
[NEW] Added outline-callout module
[NEW] Added process-steps module
[NEW] Added team-members module

--- a/src/modules/list-explanation.module/module.css
+++ b/src/modules/list-explanation.module/module.css
@@ -75,6 +75,10 @@
   z-index: 1;
 }
 
+.list-explanation__list-item::before {
+  content: none;
+}
+
 .list-explanation__list-item::after {
   content: '\200B';
   display: block;
