--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,9 +12,45 @@ body {
 
 h1, h2, h3, h4, h5, h6, .h1,
 .h2, .h3, .h4, .h5, .h6 {
-  margin-top: 0;
+  margin: 0 0 1.5rem 0;
+}
+
+p {
+  margin: 0 0 1.5rem 0;
 }
 
 address {
   font-style: normal;
+}
+
+ul, ol {
+  margin: 0 0 1.5rem 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+
+  & li {
+    margin-bottom: 1rem;
+    margin-left: 30px;
+    position: relative;
+    z-index: 1;
+
+    &::before {
+      content: '\200B';
+      background-color: $secondary;
+      display: block;
+      border-radius: 50%;
+      width: 12px;
+      height: 12px;
+      position: absolute;
+      top: 8px;
+      left: -28px;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
