--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -8,6 +8,14 @@
   h1, h2, h3, h4, h5, h6 {
     color: $white;
   }
+
+  ul li {
+    margin: 0;
+
+    &::before {
+      content: none;
+    }
+  }
 }
 
 .footer__content {
