--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,6 +6,8 @@
 @import 'components/header';
 @import 'components/footer';
 
-@import 'components/post_listing';
-
+@import 'components/post-listing';
 @import 'components/strype-button';
+
+@import 'components/blog-post';
+@import 'components/blog-footer';
