--- a/src/modules/strype-menu.module/module.css
+++ b/src/modules/strype-menu.module/module.css
@@ -110,7 +110,7 @@
 
 @media (min-width: 1024px) {
   .strype-menu__sub {
-    margin: 0 0 0 0.5rem;
+    margin: 0;
     opacity: 0;
     pointer-events: none;
     transform: translateY(-10px);
