--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -1,10 +1,8 @@
 <!--
   templateType: blog_listing
   isAvailableForNewContent: true
-  label: Boilerplate - blog listing
-  screenshotPath: ../images/template-previews/blog-index.png
+  label: Blog Listing
 -->
-{% set template_css = "../../css/templates/blog.css" %}
 {% extends "./layouts/base.html" %}
 
 {% block body %}
@@ -12,57 +10,122 @@
   label="Main section",
   class="body-container body-container--blog-index"
 %}
-
-  {# Hero banner #}
-
-  {% dnd_section
-    background_color="#f8fafc",
-    max_width=600,
-    padding={
-      "default": {
-        "top": 80,
-        "right": 0,
-        "bottom": 80,
-        "left": 0
-      },
-      "mobile": {
-        "top": 80,
-        "right": 20,
-        "bottom": 80,
-        "left": 20
+{% dnd_section
+  background_image={
+    'backgroundPosition': 'MIDDLE_CENTER',
+    'backgroundSize': 'cover',
+    'imageUrl': 'https://23575942.fs1.hubspotusercontent-na1.net/hubfs/23575942/iStock-1160135279%201%281%29.jpg'
+  },
+  margin={
+    'top': 0,
+    'bottom': 0,
+    'left': 0,
+    'right': 0
+  },
+  padding={
+    'top': '100px',
+    'bottom': '20px',
+    'left': '50%',
+    'right': '20px'
+  },
+  full_width=true
+%}
+  {% dnd_column %}
+    {% dnd_row %}
+      {% dnd_module
+        path="@hubspot/header"
+        header_tag="h6"
+        value="BLOG"
+        margin={
+          "bottom": "0"
+        }
+        styles={
+          "text" : {
+            "color" : {
+              "color" : "#FFFFFF"
+            }
+          }
+        }
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+    {% dnd_row %}
+      {% dnd_module
+        path="@hubspot/header"
+        header_tag="h1"
+        value="PERSONAL INJURY BLOG"
+        style={
+          "font": {
+            "color":"#FFFFFF"
+          }
+        }
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+    {% dnd_row %}
+      {% dnd_module
+        path="@hubspot/text"
+        value="Resources, insights, and information to provide education for our clients on personal injury law."
+        style={
+          "font": {
+            "color":"#FFFFFF"
+          }
+        }
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+    {% dnd_row
+      margin={
+        "top": "20px"
       }
-    }
-  %}
-    {% dnd_column %}
-      {% dnd_row %}
-        {% dnd_module
-          path="@hubspot/rich_text",
-          html='<div style="text-align: center;"><h1>Blog</h1><p>Use this space to tell everyone about what you have to offer.</p></div>'
-        %}
-        {% end_dnd_module %}
-      {% end_dnd_row %}
-      {% dnd_row %}
-        {% dnd_module
-          path="@hubspot/blog_subscribe",
-          title=""
-        %}
-        {% end_dnd_module %}
-      {% end_dnd_row %}
-    {% end_dnd_column %}
+     %}
+      {% dnd_module
+        path="/strype-test/modules/button",
+        offset=0,
+        width=12,
+        button_text="Get started",
+        styles={
+          "alignment" : {
+            "alignment" : {
+              "css" : "",
+              "horizontal_align" : "LEFT"
+            }
+          },
+          "text" : {
+            "color" : {
+              "color" : "#FFFFFF",
+              "opacity" : 100
+            }
+          }
+        }
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
+  {% end_dnd_column %}
   {% end_dnd_section %}
-
-  {# Blog listings and pagination #}
-
   {% dnd_section
     vertical_alignment="TOP"
+    background_color="rgba(238, 238, 238, 1)"
   %}
     {% dnd_column %}
-      {% dnd_row %}
-        {% dnd_module path="@hubspot/blog_listing" %}
+      {% dnd_row margin={
+          "top": "0",
+          "bottom": "80px"
+        }
+      %}
+        {% dnd_module path="../modules/blog-tags"%}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+      {% dnd_row margin={
+          "top": "0",
+          "bottom": "80px"
+        }
+      %}
+        {% dnd_module path="../modules/blog-listings" %}
         {% end_dnd_module %}
       {% end_dnd_row %}
       {% dnd_row %}
-        {% dnd_module path="@hubspot/pagination" %}
+        {% dnd_module path="../modules/blog-pagination" %}
         {% end_dnd_module %}
       {% end_dnd_row %}
     {% end_dnd_column %}
