[NEW] Added list-cards module
[NEW] Added location-map module
[NEW] added recent-reviews module (requires HubDB)
[IMP] Adjusted testimonials module to not include extra Jquery
[NEW] Added styles for checked lists on location pages
[NEW] Added location page tempaltes

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -55,6 +55,15 @@ ul {
   }
 }
 
+ul.--check-list li::before,
+.location-page ul li:before {
+  width: 17px;
+  height: 17px;
+  top: 6px;
+  background: $primary no-repeat center;
+  background-image: url("data:image/svg+xml,%3Csvg width='17px' height='17px' viewBox='0 0 17 17' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.91,6.72814 L7.50087,12.1372 C7.35596,12.2821 7.15945,12.3635 6.95455,12.3635 C6.74965,12.3635 6.55314,12.2821 6.40823,12.1372 L4.09005,9.81904 C3.94929,9.67331 3.8714,9.47811 3.87313081,9.27551 C3.87492,9.0729 3.95619,8.87909 4.09946,8.73582 C4.24273,8.59255 4.43654,8.51128 4.63915,8.50952 C4.84175,8.50776 5.03695,8.58565 5.18268,8.72641 L6.95455,10.4983 L11.8173,5.6355 C11.9631,5.49474 12.1582,5.41685 12.3609,5.41858081 C12.5635,5.42038 12.7573,5.50164 12.9005,5.64491 C13.0438,5.78818 13.1251,5.98199 13.1268305,6.1846 C13.1286,6.3872 13.0507,6.5824 12.91,6.72814 Z' fill='%23FFFFFF' fill-rule='nonzero'%3E%3C/path%3E%3C/svg%3E");
+}
+
 form fieldset {
   width: auto !important;
   margin-right: -24px !important;
