--- a/src/modules/multi-step-by-step.module/module.css
+++ b/src/modules/multi-step-by-step.module/module.css
@@ -1,36 +1,36 @@
-.step-by-step {
+.multi-step-by-step {
   display: block;
 }
 
-.step-by-step__content {
+.multi-step-by-step__content {
   margin-bottom: 2rem;
 }
 
-.step-by-step__content {
+.multi-step-by-step__content {
   padding: 32px 40px;
   background-color: #FFF;
   border-top: 16px solid;
   height: 100%;
 }
 
-.step-by-step__list {
+.multi-step-by-step__list {
   list-style: none;
-  margin: 0 0 2rem 0;
+  margin: 0 0 3rem 0;
   padding: 0;
 }
 
-.step-by-step__list:last-child {
+.multi-step-by-step__list:last-child {
   margin-bottom: 0;
 }
 
-.step-by-step__list-item {
-  margin-bottom: 30px;
+.multi-step-by-step__list-item {
+  margin-bottom: 16px;
   margin-left: 30px;
   position: relative;
   z-index: 1;
 }
 
-.step-by-step__list-item::before {
+.multi-step-by-step__list-item::before {
   content: '\200B';
   display: block;
   border-radius: 50%;
@@ -41,14 +41,22 @@
   left: -28px;
 }
 
-.step-by-step--content.step-by-step__list-item {
+.multi-step-by-step--content.multi-step-by-step__list-item {
   margin-left: 0;
 }
 
-.step-by-step--content.step-by-step__list-item::before {
+.multi-step-by-step--content.multi-step-by-step__list-item::before {
   display:none;
 }
 
-.step-by-step__list-item:last-child {
+.multi-step-by-step__list-item:last-child {
   margin-bottom: 0;
+}
+
+.multi-step-by-step--content.multi-step-by-step__list-item:first-child {
+  margin-bottom: 30px;
+}
+
+.multi-step-by-step--content.multi-step-by-step__list-item:last-child {
+  margin-top: 30px;
 }
