--- a/src/modules/step-by-step.module/module.css
+++ b/src/modules/step-by-step.module/module.css
@@ -20,7 +20,7 @@
 }
 
 .step-by-step__list-item {
-  margin-bottom: 30px;
+  margin-bottom: 16px;
   margin-left: 30px;
   position: relative;
   z-index: 1;
@@ -39,6 +39,14 @@
 
 .step-by-step--content.step-by-step__list-item {
   margin-left: 0;
+}
+
+.step-by-step--content.step-by-step__list-item:first-child {
+  margin-bottom: 30px;
+}
+
+.step-by-step--content.step-by-step__list-item:last-child {
+  margin-top: 30px;
 }
 
 .step-by-step--content.step-by-step__list-item::before {
