--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -111,3 +111,22 @@ input[type=week], input[type=time], textarea, select {
     }
   }
 }
+
+.body-container .row-number-1[class*="background-layers"] {
+  position: relative;
+
+  &:before {
+    content: '\200B';
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #000F1B;
+    opacity: 0.35;
+  }
+  & > * {
+    position: relative;
+  }
+}
